--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,9 +1,11 @@
 include LICENSE
 include README.md
-include requierements.txt
+include requirements.txt
 
 recursive-include reactord *
 
 exclude tox.ini
 exclude pyproject.toml
+exclude requirements_dev.txt
+recursive-exclude examples *
 recursive-exclude tests *
