--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,4 +8,5 @@ exclude tox.ini
 exclude pyproject.toml
 exclude requirements_dev.txt
 recursive-exclude examples *
+recursive-exclude reactord *.mod *.log *.pyc
 recursive-exclude tests *
