i think tox works

--- a/tox.ini
+++ b/tox.ini
@@ -1,25 +1,48 @@
 [tox]
-envlist = py310, style, coverage, check-manifest
+envlist =
+    py310
+    style,
+    coverage,
+    check-manifest
+
+# =============================================================================
+# ENVS
+# =============================================================================
+
 
 [testenv]
-deps = pytest
-commands = pytest tests/ {posargs}
+deps =
+    ipdb
+    pytest
+usedevelop = True
+commands =
+    pytest tests/ {posargs}
 
 [testenv:style]
-deps =
-    flake8
-    flake8-black
-    flake8-isort
-commands = flake8 setup.py reactord/ tests/ {posargs}
+skip_install = True
+usedevelop = False
+deps = flake8
+       flake8-black
+       flake8-builtins
+       flake8-isort
+       pep8-naming
+commands =
+        flake8 setup.py tests/ reactord/ {posargs}
+
 
 [testenv:coverage]
 deps =
+    {[testenv]deps}  # Esto instala las mismas dependencias que [testenv]
     coverage
     pytest-cov
 commands =
+    coverage erase
     pytest tests/ --cov=reactord/ --cov-append --cov-report=term-missing
     --fail-under=80
 
+
 [testenv:check-manifest]
+skip_install = True
+usedevelop = False
 deps = check-manifest
 commands = check-manifest
