--- a/tox.ini
+++ b/tox.ini
@@ -37,8 +37,8 @@ deps =
     pytest-cov
 commands =
     coverage erase
-    pytest tests/ --cov=reactord/ --cov-append --cov-report=term-missing
-    --fail-under=80
+    pytest tests/ --cov=reactord/ --cov-append --cov-report=term-missing 
+    coverage report --fail-under=80 -m
 
 
 [testenv:check-manifest]
