--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,13 @@ requires = ["setuptools"]
 line-length = 79
 target-version = ["py310"]
 
+[tool.pytest.ini_options]
+
+testpaths = [
+    "tests",
+]
+
+
 [project]
 name = "reactord"
 version = "0.0.1"
