--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py310
     style,
     coverage,
+    docstyle,
     check-manifest
 
 # =============================================================================
@@ -40,6 +41,9 @@ commands =
     pytest tests/ --cov=reactord/ --cov-append --cov-report=term-missing 
     coverage report --fail-under=80 -m
 
+[testenv:docstyle]
+deps = pydocstyle
+commands = pydocstyle reactord --convention=numpy
 
 [testenv:check-manifest]
 skip_install = True
