--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,14 @@
 [tox]
 envlist =
-    py310
     style,
+    check-manifest,
+    check-testdir,
+    py37,
+    py38,
+    py39,
+    py310,
+    py311,
     coverage,
-    check-manifest
 
 # =============================================================================
 # ENVS
@@ -18,17 +23,6 @@ usedevelop = True
 commands =
     pytest tests/ {posargs}
 
-[testenv:style]
-skip_install = True
-usedevelop = False
-deps = flake8
-       flake8-black
-       flake8-builtins
-       flake8-isort
-       pep8-naming
-commands =
-        flake8 setup.py tests/ reactord/ {posargs}
-
 
 [testenv:coverage]
 deps =
@@ -37,8 +31,20 @@ deps =
     pytest-cov
 commands =
     coverage erase
-    pytest tests/ --cov=reactord/ --cov-append --cov-report=term-missing 
+    pytest tests/ --cov=reactord/ --cov-append --cov-report=term-missing
     coverage report --fail-under=80 -m
+
+
+[testenv:style]
+skip_install = True
+usedevelop = False
+deps = flake8
+       flake8-black
+       flake8-builtins
+       flake8-import-order
+       pep8-naming
+commands =
+        flake8 setup.py tests/ reactord/ {posargs}
 
 
 [testenv:check-manifest]
@@ -46,3 +52,11 @@ skip_install = True
 usedevelop = False
 deps = check-manifest
 commands = check-manifest
+
+
+[testenv:check-testdir]
+skip_install = True
+deps =
+    https://github.com/quatrope/qafan/archive/refs/heads/master.zip
+commands =
+    check-testdir check tests/ --reference-dir reactord/ {posargs}
