--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,8 @@ classifiers = [
 ]
 urls = {Homepage = "https://github.com/SalvadorBrandolin/reactord"}
 dependencies = [
-    "numpy>=1.21.5", 
+    "numpy", 
     "py-pde>=0.21.0", 
-    "scipy>=1.9.0", 
+    "scipy", 
     "thermo>=0.2.21"
 ]
