--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,7 @@ envlist =
     py310,
     py311,
     coverage,
+isolated_build = True
 
 # =============================================================================
 # ENVS
@@ -44,7 +45,7 @@ deps = flake8
        flake8-import-order
        pep8-naming
 commands =
-        flake8 setup.py tests/ reactord/ {posargs}
+        flake8 tests/ reactord/ {posargs}
 
 
 [testenv:check-manifest]
