--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist =
     style,
+    docstyle,
     check-manifest,
     check-testdir,
     py37,
@@ -37,6 +38,9 @@ deps = flake8
 commands =
         flake8 tests/ reactord/ {posargs}
 
+[testenv:docstyle]
+deps = pydocstyle
+commands = pydocstyle reactord --convention=numpy
 
 [testenv:check-manifest]
 skip_install = True
