--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,5 @@
 [tox]
+isolated_build = True
 envlist =
     style,
     docstyle,
@@ -10,13 +11,19 @@ envlist =
     py310,
     py311,
     coverage,
-isolated_build = True
 
 
 # =============================================================================
 # ENVS
 # =============================================================================
 
+[gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
+    3.10: py310, style, docstyle, check-manifest, check-testdir, coverage
+    3.11: py311
 
 [testenv]
 deps =
@@ -66,4 +73,3 @@ commands =
     coverage erase
     pytest tests/ --cov=reactord/ --cov-append --cov-report=term-missing
     coverage report --fail-under=90 -m
-
