--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ usedevelop = False
 deps = flake8
        flake8-black
        flake8-builtins
-       flake8-import-order
+       #flake8-import-order
        pep8-naming
 commands =
         flake8 tests/ reactord/ {posargs}
