--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     docstyle,
     check-manifest,
     check-testdir,
+    docs,
     py37,
     py38,
     py39,
@@ -22,7 +23,7 @@ python =
     3.7: py37
     3.8: py38
     3.9: py39
-    3.10: py310, style, docstyle, check-manifest, check-testdir, coverage
+    3.10: py310, style, docstyle, check-manifest, check-testdir, coverage, docs
     3.11: py311
 
 [testenv]
@@ -62,6 +63,16 @@ deps =
     https://github.com/quatrope/qafan/archive/refs/heads/master.zip
 commands =
     check-testdir check tests/ --reference-dir reactord/ {posargs}
+
+
+[testenv:docs]
+description = "Invoke sphinx-build to build the HTML docs"
+whitelist_externals = make
+usedevelop = True
+skip_install = False
+changedir = docs
+deps = -r {toxinidir}/docs/requirements.txt
+commands = sphinx-build -W -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
 
 
 [testenv:coverage]
