--- a/tox.ini
+++ b/tox.ini
@@ -37,10 +37,10 @@ commands =
 [testenv:style]
 skip_install = True
 usedevelop = False
-deps = flake8
+deps = flake8==5.0.4
        flake8-black
        flake8-builtins
-       #flake8-import-order
+       flake8-import-order
        pep8-naming
 commands =
         flake8 tests/ reactord/ {posargs}
