--- a/tox.ini
+++ b/tox.ini
@@ -69,7 +69,7 @@ commands =
 description = "Invoke sphinx-build to build the HTML docs"
 whitelist_externals = make
 usedevelop = True
-skip_install = False
+skip_install = True
 changedir = docs
 deps = -r {toxinidir}/docs/requirements.txt
 commands = sphinx-build -W -b html -d {envtmpdir}/doctrees source {envtmpdir}/html
