--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ recursive-include reactord *
 
 exclude tox.ini
 exclude pyproject.toml
+exclude .readthedocs.yml
 exclude requirements_dev.txt
 recursive-exclude examples *
 recursive-exclude reactord *.mod *.log *.pyc
