--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,10 @@ name: ReactorD
 on:
   - push
   - pull_request
+  - release
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
     strategy:
@@ -22,3 +23,27 @@ jobs:
         run: pip install tox tox-gh-actions
       - name: Test with tox
         run: tox -r
+        
+        
+  deploy:
+     needs: [test]
+     if: github.event_name == 'release'
+     runs-on: ubuntu-latest
+     steps:
+     - uses: actions/checkout@v2
+     - uses: actions/download-artifact@v2
+       with:
+         name: dist
+         path: dist
+     - name: Set up Python
+       uses: actions/setup-python@v2
+       with:
+         python-version: '3.9'
+     - name: Publish
+       env:
+         TWINE_USERNAME: ${{ secrets.PYPI_USER }}
+         TWINE_PASSWORD: ${{ secrets.PYPI_PASS }}
+       run: |
+         python -m pip install --upgrade pip
+         pip install twine
+         twine upload --skip-existing dist/*
