--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,9 +5,9 @@ include requirements.txt
 recursive-include reactord *
 
 exclude tox.ini
-exclude pyproject.toml
 exclude requirements_dev.txt
 recursive-exclude examples *
+recursive-exclude dist *
 recursive-exclude reactord *.mod *.log *.pyc
 recursive-exclude tests *
 recursive-exclude docs *
