--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ testpaths = [
 
 [project]
 name = "reactord"
-version = "0.0.1"
+version = "0.0.1a1"
 authors = [{name = "Brandolín, Salvador Eduardo", email = "salvadorebrandolin@mi.unc.edu.ar"},
            {name = "Parodi, Adrián", email = "adrian.parodi@mi.unc.edu.ar"},
            {name = "Rovezzi, Juan Pablo", email = "juan.rovezzi@mi.unc.edu.ar"},
@@ -26,7 +26,7 @@ readme = "README.md"
 description = "Package for the simulation and design of chemical reactors"
 keywords = ["chemical reactor", "reactor design", "reactor simulation", "chemical engineering"]
 classifiers = [
-    "Development Status :: 1 - Alpha",
+    "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Education",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
