--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version}}
+      - name: Install pandoc
+        run: sudo apt-get install pandoc
       - name: Install tox
         run: pip install tox tox-gh-actions
       - name: Test with tox
