--- a/tox.ini
+++ b/tox.ini
@@ -40,7 +40,7 @@ commands =
 skip_install = True
 usedevelop = False
 deps = 
-       flake8==5.0.4
+       flake8
        flake8-black
        flake8-builtins
        flake8-import-order
@@ -57,8 +57,7 @@ deps =
        flake8-import-order
        flake8-nb
        pep8-naming
-commands =
-        flake8-nb docs/source/tutorial/
+commands = flake8-nb docs/source/tutorial/ {posargs}
 
 [testenv:docstyle]
 deps = pydocstyle
