--- a/tox.ini
+++ b/tox.ini
@@ -90,7 +90,7 @@ commands = sphinx-build -W -b html -d {envtmpdir}/doctrees source {envtmpdir}/ht
 
 [testenv:coverage]
 deps =
-    {[testenv]deps}  # Esto instala las mismas dependencias que [testenv]
+    {[testenv]deps}  # same dependencies of [testenv]
     coverage
     pytest-cov
 commands =
