--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -4,6 +4,25 @@ on:
   - push
 
 jobs:
+  run-coverage:
+
+    runs-on: ubuntu-latest
+    python-version: ['3.11']
+    steps:
+      - uses: actions/checkout@master
+      - name: Set up Python ${{ python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ python-version}}
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest coverage pytest-cov
+      - name: run coverage
+        run: 
+          coverage erase pytest tests/ --cov=reactord/ --cov-append 
+          --cov-report=term-missing  coverage report -m
+
   coverage-badge:
     
     runs-on: ubuntu-latest
