--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -7,13 +7,12 @@ jobs:
   run-coverage:
 
     runs-on: ubuntu-latest
-    python-version: ['3.11']
     steps:
       - uses: actions/checkout@master
-      - name: Set up Python ${{ python-version }}
+      - name: Set up Python
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ python-version}}
+          python-version: '3.11'
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
