--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -19,8 +19,8 @@ jobs:
           pip install pytest coverage pytest-cov
       - name: run coverage
         run: 
-          coverage erase pytest tests/ --cov=reactord/ --cov-append 
-          --cov-report=term-missing  coverage report -m
+          coverage erase pytest ../../tests/ --cov=reactord/ --cov-append 
+          --cov-report=term-missing coverage report -m
 
       # Creating the badge
       - uses: actions/checkout@v2
