--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -9,5 +9,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install coverage-badge
+      - name: run coverage
+        run: |
+          coverage erase
+          coverage run -m pytest ../../tests/
+
       - name: coverage.py badge
         uses: tj-actions/coverage-badge-py@v1.8
