--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install coverage-badge
+          pip install pytest coverage pytest-cov
       - name: run coverage
         run: |
           coverage erase
