--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -17,6 +17,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install pytest coverage pytest-cov
+      - name: Install ReactorD
+        run: pip install .
       - name: run coverage
         run: |
           coverage erase
