--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -8,5 +8,25 @@ jobs:
 
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: codecov/codecov-action@v3
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.11'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest coverage pytest-cov
+      - name: Install ReactorD
+        run: pip install .
+      - name: run coverage
+        run: |
+          coverage erase
+          coverage run -m pytest tests/
+
+      # Creating the badge
+      - name: uploading to codecov
+        uses: actions/checkout@master
+        uses: codecov/codecov-action@v3
+        with:
+          files: .coverage
