--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -26,7 +26,7 @@ jobs:
 
       # Creating the badge
       - name: uploading to codecov
-        uses: actions/checkout@master
-        uses: codecov/codecov-action@v3
+      - uses: actions/checkout@master
+      - uses: codecov/codecov-action@v3
         with:
           files: .coverage
