--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -25,8 +25,8 @@ jobs:
           coverage run -m pytest tests/
 
       # Creating the badge
-      - name: uploading to codecov
       - uses: actions/checkout@master
-      - uses: codecov/codecov-action@v3
+      - name: uploading to codecov
+        uses: codecov/codecov-action@v3
         with:
           files: .coverage
