--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -29,4 +29,4 @@ jobs:
       - name: uploading to codecov
         uses: codecov/codecov-action@v3
         with:
-          files: .coverage
+          files: ./.coverage
