--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -24,9 +24,9 @@ jobs:
           coverage erase
           coverage run -m pytest tests/
 
-      # Creating the badge 
+      # Creating the badge
       - name: uploading to codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./.coverage
+          files: /home/runner/work/ReactorD/ReactorD/.coverage
