--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -19,14 +19,16 @@ jobs:
           pip install pytest coverage pytest-cov
       - name: Install ReactorD
         run: pip install .
-      - name: run coverage
-        run: |
-          coverage erase
-          coverage run -m pytest tests/
+      - name: erase .coverage just in case
+        run: coverage erase
+      - name: generate .coverage report
+        run: coverage run -m pytest tests/
+      - name: transform .coverage into coverage.xml
+        run: coverage xml 
 
       # Creating the badge
       - name: uploading to codecov
         uses: codecov/codecov-action@v3
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
-          files: /home/runner/work/ReactorD/ReactorD/.coverage
+          files: /home/runner/work/ReactorD/ReactorD/coverage.xml
