--- a/tox.ini
+++ b/tox.ini
@@ -33,7 +33,7 @@ deps =
     pytest
 usedevelop = True
 commands =
-    pytest tests/substance/test_substance.py {posargs}
+    pytest tests/ {posargs}
 
 
 [testenv:style]
