--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,7 @@ classifiers = [
 urls = {Homepage = "https://github.com/SalvadorBrandolin/reactord"}
 dependencies = [
     "dill>=0.3.6",
-    "numpy",
-    "scipy", 
+    "numpy>=1.21.4",
+    "scipy>=1.7.3", 
     "thermo>=0.2.21"
 ]
