--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,10 +33,6 @@ jobs:
      runs-on: ubuntu-latest
      steps:
      - uses: actions/checkout@v2
-     - uses: actions/download-artifact@v3
-       with:
-         name: dist
-         path: dist
      - name: Set up Python
        uses: actions/setup-python@v3
        with:
@@ -48,4 +44,4 @@ jobs:
        run: |
          python -m pip install --upgrade pip
          pip install twine
-         twine upload --skip-existing dist/*
+         twine upload dist/*
