--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
          TWINE_USERNAME: ${{ secrets.PYPI_USER }}
          TWINE_PASSWORD: ${{ secrets.PYPI_PASS }}
        run: |
-         python -m pip install --upgrade pip
+         python -m pip install --upgrade pip build
+         python -m build --sdist
          pip install twine
          twine upload dist/*
