--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -16,4 +16,4 @@ recursive-exclude reactord *.mod *.log *.pyc
 recursive-exclude tests *
 recursive-exclude docs *
 recursive-exclude presentation *
-recursive-exlcude .vscode
+recursive-exlcude .vscode *
