--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,8 +42,11 @@ classifiers = [
 urls = {Homepage = "https://github.com/SalvadorBrandolin/reactord"}
 
 dependencies = [
-    "dill>=0.3.6",
-    "numpy>=1.21.4",
-    "scipy>=1.7.3", 
-    "thermo>=0.2.21"
+    'ipython',
+    'dill >= 0.3.6',
+    'numpy >= 1.24.3',
+    'pandas >= 2.0.1', 
+    'scipy >= 1.10.1',
+    'sympy >= 1.12',
+    'thermo >= 0.2.24',
 ]
