--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ testpaths = [
 
 [project]
 name = "reactord"
-version = "0.0.1a2"
+version = "0.0.1b1"
 authors = [{name = "Brandolín, Salvador Eduardo", email = "salvadorebrandolin@mi.unc.edu.ar"},
            {name = "Parodi, Adrián", email = "adrian.parodi@mi.unc.edu.ar"},
            {name = "Rovezzi, Juan Pablo", email = "juan.rovezzi@mi.unc.edu.ar"},
@@ -29,7 +29,7 @@ readme = "README.md"
 description = "Package for the simulation and design of chemical reactors"
 keywords = ["chemical reactor", "reactor design", "reactor simulation", "chemical engineering"]
 classifiers = [
-    "Development Status :: 2 - Pre-Alpha",
+    "Development Status :: 4 - Beta",
     "Intended Audience :: Education",
     "Intended Audience :: Science/Research",
     "License :: OSI Approved :: MIT License",
