--- a/tox.ini
+++ b/tox.ini
@@ -57,7 +57,9 @@ commands =
 #commands = flake8-nb --ignore=BLK100 docs/source/tutorial/
 
 [testenv:docstyle]
-deps = pydocstyle
+deps = 
+       pydocstyle
+       tomli
 commands = pydocstyle reactord --convention=numpy
 
 [testenv:check-manifest]
