--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ testpaths = [
 
 [project]
 name = "reactord"
-version = "0.0.1b"
+version = "0.0.1b3"
 authors = [{name = "Brandolín, Salvador Eduardo", email = "salvadorebrandolin@mi.unc.edu.ar"},
            {name = "Parodi, Adrián", email = "adrian.parodi@mi.unc.edu.ar"},
            {name = "Rovezzi, Juan Pablo", email = "juan.rovezzi@mi.unc.edu.ar"},
