--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -1,5 +1,7 @@
 name: Codecov
-on: [push]
+on:
+  - push
+  - workflow_dispatch
 jobs:
   run:
     runs-on: ${{ matrix.os }}
@@ -15,6 +17,8 @@ jobs:
       uses: actions/setup-python@master
       with:
         python-version: '3.10'
+    - name: Install ReactorD
+      run: pip install .
     - name: Generate coverage report
       run: |
         pip install pytest
@@ -27,7 +31,7 @@ jobs:
         directory: ./coverage/reports/
         env_vars: OS,PYTHON
         fail_ci_if_error: true
-        files: ./coverage1.xml,./coverage2.xml,!./cache
+        files: ./coverage.xml
         flags: unittests
         name: codecov-umbrella
         verbose: true
