--- a/.github/workflows/cov-badge.yml
+++ b/.github/workflows/cov-badge.yml
@@ -24,9 +24,9 @@ jobs:
         pip install pytest
         pip install pytest-cov
         coverage erase
-        pytest tests/ --cov=reactord/ --cov-append --cov-report=term-missing --cov-report=xml
+        pytest ./tests --cov=reactord/ --cov-report=xml
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
-        files: /home/runner/work/ReactorD/ReactorD/coverage.xml
+        files: ./coverage.xml
